Praticando site responsivo.
Ainda não concluído, não está sendo responsivo como o esperado.

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   <title>Document</title>
 </head>
 <body>
-  <!--Div do cartão de perfil-->
-  <div class="profile-card">
-    <img src="assets/images/avatar-jessica.jpeg" alt="An avatar" class="avatar">
+  <!--Container geral-->
+  <div class="container">
+    <!--Container do card e descrição-->
     <div class="description-container">
-      <h1 class="text" id="header">Nome Bem Completo</h1>
-      <h2 class="text" id="location">São Paulo, Brasil</h2>
-      <p class="text" id="position">"Fullstack Developer"</p>
-  <!--Botões que levam aos respectivos sites-->
-      <button type="button" class="text">GitHub</button>
-      <button type="button" class="text">Frontend Mentor</button>
-      <button type="button" class="text">Linkedin</button>
-      <button type="button" class="text">X</button>
-      <button type="button" class="text">Instagram</button>
+      <!--Informações do usuário-->
+      <img src="assets/images/avatar-jessica.jpeg" alt="User avatar." class="avatar">
+      <p class="description-text" id="user-name">Nome Sobrenome</p>
+      <p class="description-text" id="user-location">São Paulo, Brasil</p>
+      <p class="description-text" id="user-description">"Fullstack Developer"</p>
+      <!--Links sociais do usuário-->
+      <a href="#" class="user-link" id="github">GitHub</a>
+      <a href="#" class="user-link">Frontend Mentor</a>
+      <a href="#" class="user-link">Linkedin</a>
+      <a href="#" class="user-link">X</a>
+      <a href="#" class="user-link">Instagram</a>
     </div>
   </div>
 </body>
