Conclusão do projeto
Desafio do Frontend Mentor concluído.

Foco em reforçar alguns fundamentos de HTML/CSS.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="icon" type="image/x-icon" href="assets/images/favicon-32x32.png">
+  <title>Apenas Fe</title>
 </head>
 <body>
   <!--Container geral-->
@@ -11,16 +12,16 @@
     <!--Container do card e descrição-->
     <div class="description-container">
       <!--Informações do usuário-->
-      <img src="assets/images/avatar-jessica.jpeg" alt="User avatar." class="avatar">
-      <p class="description-text" id="user-name">Nome Sobrenome</p>
+      <img src="assets/images/hamster.png" alt="User avatar." class="avatar">
+      <p class="description-text" id="user-name">Felipe Soares</p>
       <p class="description-text" id="user-location">São Paulo, Brasil</p>
-      <p class="description-text" id="user-description">"Fullstack Developer"</p>
+      <p class="description-text" id="user-description">"Fullstack Developer em aprendizado."</p>
       <!--Links sociais do usuário-->
-      <a href="#" class="user-link" id="github">GitHub</a>
-      <a href="#" class="user-link">Frontend Mentor</a>
-      <a href="#" class="user-link">Linkedin</a>
-      <a href="#" class="user-link">X</a>
-      <a href="#" class="user-link">Instagram</a>
+      <a href="https://github.com/ApenasFe" class="user-link" id="github">GitHub</a>
+      <a href="https://www.frontendmentor.io/profile/ApenasFe" class="user-link">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/in/fe-soares" class="user-link">Linkedin</a>
+      <a href="https://x.com" class="user-link">X</a>
+      <a href="https://www.instagram.com" class="user-link">Instagram</a>
     </div>
   </div>
 </body>
